<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity"
	android:padding="20sp">
	<TextView
		android:textStyle="bold"
		android:textColor="#008278"
		android:layout_height="50sp"
		android:layout_width="match_parent"
		android:gravity="center"
		android:textSize="20sp"
		android:text="@string/area_converter"
		android:id="@+id/top_bar"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent"/>
	<androidx.constraintlayout.widget.ConstraintLayout
		android:id="@+id/input_area"
		android:layout_marginTop="15sp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/background_converter"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@id/top_bar"
		app:layout_constraintEnd_toEndOf="parent">
		<LinearLayout
			android:layout_marginStart="10sp"
			android:layout_marginEnd="10sp"
			android:layout_marginTop="17sp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:id="@+id/first_part"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintEnd_toEndOf="parent">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<Spinner
					android:textColor="@color/black"
					android:id="@+id/spinner_converted_from"
					android:layout_width="0sp"
					android:layout_weight="0.75"
					android:layout_height="50sp"/>
				<EditText
					android:id="@+id/edit_text_converted_from"
					android:clickable="false"
					android:focusable="false"
					android:textColor="@color/black"
					android:background="@drawable/shape"
					android:hint="@string/_0"
					android:padding="10sp"
					android:layout_width="0sp"
					android:layout_height="50sp"
					android:layout_weight="1.25"
					android:inputType="numberDecimal"
					android:importantForAutofill="no"
					android:gravity="end|center"/>
			</LinearLayout>
			<TextView
				android:id="@+id/converted_from_full_name"
				android:textColor="@color/black"
				android:gravity="center_vertical|end"
				android:padding="10sp"
				android:text="@string/full_unit_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
		</LinearLayout>
		<LinearLayout
			android:layout_marginStart="10sp"
			android:layout_marginEnd="10sp"
			android:layout_marginTop="25sp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/first_part"
			app:layout_constraintEnd_toEndOf="parent">
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">
				<Spinner
					android:textColor="@color/black"
					android:id="@+id/spinner_converted_to"
					android:layout_width="0sp"
					android:layout_weight="0.75"
					android:layout_height="50sp"/>
				<EditText
					android:id="@+id/edit_text_converted_to"
					android:clickable="false"
					android:focusable="false"
					android:textColor="@color/black"
					android:background="@drawable/shape"
					android:hint="@string/_0"
					android:inputType="numberDecimal"
					android:padding="10sp"
					android:layout_width="0sp"
					android:layout_height="50sp"
					android:layout_weight="1.25"
					android:gravity="end|center"
					android:importantForAutofill="no" />
			</LinearLayout>
			<TextView
				android:id="@+id/converted_to_full_name"
				android:textColor="@color/black"
				android:gravity="center_vertical|end"
				android:padding="10sp"
				android:text="@string/full_unit_name"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
		</LinearLayout>
	</androidx.constraintlayout.widget.ConstraintLayout>
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@id/input_area"
		android:layout_marginTop="25sp">
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="center">
			<Button
				android:textColor="#008278"
				android:id="@+id/button_ac"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:layout_width="0sp"
				android:text="@string/ac"
				android:textSize="25sp"
				style="?android:attr/buttonBarButtonStyle" />
			<Button
				android:textColor="#008278"
				android:id="@+id/button_backspace"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:layout_width="0sp"
				android:text="@string/backspace"
				android:textSize="25sp"
				android:layout_marginStart="12sp"/>
		</LinearLayout>
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="center"
			android:layout_marginTop="10sp">
			<Button
				android:textColor="#008278"
				android:id="@+id/button7"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:layout_width="0sp"
				android:text="@string/_7"
				android:textSize="25sp"/>
			<Button
				android:textColor="#008278"
				android:id="@+id/button8"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:layout_width="0sp"
				android:text="@string/_8"
				android:textSize="25sp"
				android:layout_marginStart="12sp"/>
			<Button
				android:textColor="#008278"
				android:id="@+id/button9"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:layout_width="0sp"
				android:text="@string/_9"
				android:textSize="25sp"
				android:layout_marginStart="12sp" />
			
		</LinearLayout>
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="center"
			android:layout_marginTop="10sp">
			<Button
				android:textColor="#008278"
				android:id="@+id/button4"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:layout_width="0sp"
				android:text="@string/_4"
				android:textSize="25sp"/>
			<Button
				android:textColor="#008278"
				android:id="@+id/button5"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:layout_width="0sp"
				android:text="@string/_5"
				android:textSize="25sp"
				android:layout_marginStart="12sp"/>
			<Button
				android:textColor="#008278"
				android:id="@+id/button6"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:layout_width="0sp"
				android:text="@string/_6"
				android:textSize="25sp"
				android:layout_marginStart="12sp" />
			
		</LinearLayout>
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:gravity="center"
			android:layout_marginTop="10sp">
			<Button
				android:textColor="#008278"
				android:id="@+id/button1"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:layout_width="0sp"
				android:text="@string/_1"
				android:textSize="25sp"/>
			<Button
				android:textColor="#008278"
				android:id="@+id/button2"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:layout_width="0sp"
				android:text="@string/_2"
				android:textSize="25sp"
				android:layout_marginStart="12sp"/>
			<Button
				android:textColor="#008278"
				android:id="@+id/button3"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:layout_width="0sp"
				android:text="@string/_3"
				android:textSize="25sp"
				android:layout_marginStart="12sp" />
		</LinearLayout>
		<LinearLayout
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:orientation="horizontal"
			android:layout_gravity="end"
			android:layout_marginTop="10sp">
			<View
				android:layout_width="0sp"
				android:layout_height="0sp"
				android:layout_weight="1" />
			<Button
				android:layout_marginStart="12sp"
				android:textColor="#008278"
				android:id="@+id/button0"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:layout_width="0sp"
				android:text="@string/_0"
				android:textSize="25sp"/>
			<Button
				android:textColor="#008278"
				android:id="@+id/button_decimal"
				style="?android:attr/buttonBarButtonStyle"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:layout_width="0sp"
				android:text="@string/decimal"
				android:textSize="25sp"
				android:layout_marginStart="12sp"/>
		</LinearLayout>
	</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>